2011-06-28  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        Fix sampling build
        https://bugs.webkit.org/show_bug.cgi?id=63579

        Gets opcode sampling building again, doesn't seem to work alas

        * bytecode/SamplingTool.cpp:
        (JSC::SamplingTool::notifyOfScope):
        * bytecode/SamplingTool.h:
        (JSC::SamplingTool::SamplingTool):
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::enableSampler):
        * runtime/Executable.h:
        (JSC::ScriptExecutable::ScriptExecutable):

Canonical link: https://commits.webkit.org/79258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89973 268f45cc-cd09-0410-ab3c-d52691b4dbfc